--- a/css/style.css
+++ b/css/style.css
@@ -11,4 +11,53 @@ body {
   font-family: "Roboto Mono", monospace;
 }
 
+.header__title {
+  text-align: center;
+  color: hsl(186deg, 14%, 43%);
+  font-size: 1em;
+  margin: 30px 0;
+  letter-spacing: 8px;
+}
+
+.calculator-container {
+  background-color: hsl(0deg, 0%, 100%);
+  width: 375px;
+  margin: auto;
+  border-radius: 16px;
+  padding: 32px;
+  margin-bottom: 30px;
+}
+
+.inputs-section__bill--label {
+  display: block;
+  color: hsl(186deg, 14%, 43%);
+  font-size: 0.75em;
+  margin-bottom: 8px;
+}
+
+.inputs-section__bill-input {
+  font-family: "Roboto Mono", monospace;
+  font-size: 1rem;
+  text-align: right;
+  caret-color: hsl(172deg, 67%, 45%);
+}
+
+.btns {
+  border: none;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 15px;
+  margin-bottom: 30px;
+}
+.btns__legend {
+  display: block;
+  color: hsl(186deg, 14%, 43%);
+  font-size: 0.75em;
+  margin-bottom: 8px;
+}
+.btns__button {
+  width: 147px;
+  height: 50px;
+}
+
 /*# sourceMappingURL=style.css.map */
