--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,45 @@
 @use "./initial";
 
 @use "./variables";
+
+@use "./mixins";
+
+.header__title {
+  text-align: center;
+  color: variables.$Dark-grayish-cyan;
+  font-size: 1em;
+  margin: 30px 0;
+  letter-spacing: 8px;
+}
+
+.calculator-container {
+  background-color: variables.$White;
+  width: 375px;
+  margin: auto;
+  border-radius: 16px;
+  padding: 32px;
+  margin-bottom: 30px;
+}
+
+.inputs-section__bill--label {
+  @include mixins.label;
+}
+
+.inputs-section__bill-input {
+  @include mixins.input("../images/icon-dollar.svg");
+}
+
+.btns {
+  border: none;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 15px;
+  margin-bottom: 30px;
+  &__legend {
+    @include mixins.label;
+  }
+  &__button {
+    width: 147px;
+    height: 50px;
+  }
+}
