--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,16 @@ body {
 .btns__button {
   width: 147px;
   height: 50px;
+  background-color: hsl(183deg, 100%, 15%);
+  color: hsl(189deg, 41%, 97%);
+  font-family: "Roboto Mono", monospace;
+  font-size: 1em;
+  border: none;
+  border-radius: 4px;
+}
+.btns__button:active {
+  background-color: hsl(172deg, 67%, 45%);
+  color: hsl(183deg, 100%, 15%);
 }
 
 /*# sourceMappingURL=style.css.map */
