--- a/sass/style.scss
+++ b/sass/style.scss
@@ -41,5 +41,15 @@
   &__button {
     width: 147px;
     height: 50px;
+    background-color: variables.$Very-dark-cyan;
+    color: variables.$Very-light-grayish-cyan;
+    font-family: variables.$font;
+    font-size: 1em;
+    border: none;
+    border-radius: 4px;
+    &:active {
+      background-color: variables.$Strong-cyan;
+      color: variables.$Very-dark-cyan;
+    }
   }
 }
