--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -1,4 +1,4 @@
-@use "./variables";
+@use "variables";
 
 @mixin label {
   display: block;
@@ -9,7 +9,29 @@
 
 @mixin input($icono) {
   font-family: variables.$font;
-  font-size: 1rem;
+  font-size: 1em;
   text-align: right;
   caret-color: variables.$Strong-cyan;
+  border-radius: 4px;
+  padding-right: 10px;
+  border: none;
+  width: 100%;
+  height: 48px;
+  margin-bottom: 30px;
+  &:hover {
+    cursor: pointer;
+  }
+  &:focus {
+    outline: none;
+    border: 2px solid variables.$Strong-cyan;
+  }
+  &::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+  }
+  background: {
+    image: url($icono);
+    repeat: no-repeat;
+    position: 10px center;
+    color: variables.$Very-light-grayish-cyan;
+  }
 }
